test/fail/unused-shared-pattern.mo
actor {
  public shared (caller) func f() : () {};
  public shared ({caller}) func g() : () {};
}
